This documents significant changes in the 1.0 branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0

Any uppercase BUG_* names are modernish shell bug IDs.

2022-07-10:

- Fixed a potential crash on retrieving an empty line from the command history.

- Fixed a potential crash in the lexical analyser on processing single-byte
  characters with the highest bit set.

2022-07-09:

- Fixed a bug that broke '[[ ... ]]' test expressions for the command
  following a syntax error in an associative array assignment.

2022-07-05:

- Fixed a spurious syntax error on encountering a process substitution
  following a redirection without being an argument to a redirection.
  For example, this now writes 'OK' to standard error: cat >&2 <(echo OK)

- Fixed the detection of a syntax error in compound assignments to
  associative arays.

2022-07-02:

- Fixed a bug where, if the last command in a subshell was an external
  command that was terminated by a signal, the exit status ($?) of the
  subshell did not reflect this by adding 256 to the signal number.

- Fixed a bug that caused signal traps to be ignored if the shell was
  signalled from a subshell that is the last command in the script.

2022-07-01:

- In scripts, $COLUMNS and $LINES are now kept up to date in scripts at
  initialization and when the window size changes (previously, this
  required setting a dummy trap for the SIGWINCH signal in the script).

2022-06-28:

- Fixed a bug that caused the <#((num)) or >#((num)) arithmetic seek
  redirection operator to fail if used with file descriptor 0, 1 or 2
  connected to a block device.

2022-06-22:

- Fixed: 'echo' failed when used inside a command substitution that
  is inside a nested compound assignment.

- Fixed a crash in KEYBD trap handling introduced on 2021-11-29.

2022-06-20:

- Fixed a race condition that could cause redirections to fail with a
  "cannot create" or "cannot open" error while processing a signal trap.
