@@ -172,6 +172,9 @@ For more details, see the NEWS file and for complete details, see the git log.
 	override and replace special built-in commands, except for type
 	definition commands previously created by these commands.
 
+32.	The .sh.level variable is now read-only except inside a DEBUG trap.
+	The current level/scope is now restored when the DEBUG trap run ends.
+
 ____________________________________________________________________________
 
 		KSH-93 VS. KSH-88
